Document new option 'o'.

--- a/educ_noip.1
+++ b/educ_noip.1
@@ -22,6 +22,9 @@ Create a config file and exit. (Will prompt for a location.)
 .BI "\-x " path
 Load a config file from a custom location.
 .TP
+.BI "\-o "
+Don't cycle. Update the host(s) only once.
+.TP
 .BI "\-B "
 Run in the background as a daemon.
 .SH FILES
