--- a/enhanced-duc.1
+++ b/enhanced-duc.1
@@ -34,7 +34,7 @@ with the config file specified by path
 Turn on debug mode
 .It Fl o
 Don't cycle, i.e. don't periodically check for IP changes.
-Only update the hostname(s) only once.
+Only update the hostname(s) once.
 .It Fl B
 Run in the background and act as a daemon
 .El
