--- a/enhanced-duc.1
+++ b/enhanced-duc.1
@@ -1,7 +1,7 @@
 .\"
 .\" Public domain
 .\"
-.Dd April 8, 2021
+.Dd January 10, 2023
 .Dt ENHANCED-DUC 1
 .Os
 .Sh NAME
@@ -10,8 +10,8 @@
 .Sh SYNOPSIS
 .Nm enhanced-duc
 .Bk -words
-.Op OPTION
-.Op ...
+.Op Fl hcDoB
+.Op Fl x Ar path
 .Ek
 .Sh DESCRIPTION
 .Nm
